// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Allow load custom resources > md2html single page with custom resources > filelist 1`] = `
"[
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "_bundle/search-async-1",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/app-css-3",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/page-constructor-extension.css",
  "_bundle/page-constructor-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-css-0",
  "_bundle/search-js-1",
  "_bundle/search-css-3",
  "_bundle/search-css-1",
  "_bundle/search-js-2",
  "_bundle/search-css-2",
  "index.html",
  "page.html",
  "project/config.html",
  "single-page-toc.js",
  "single-page.html",
  "single-page.json",
  "toc.js"
]"
`;

exports[`Allow load custom resources > md2html single page with custom resources 1`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources > md2html single page with custom resources 2`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation | Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="noIndex" content="true">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","description":"","links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"],"title":"Documentation","noIndex":true},"title":"Documentation"},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html single page with custom resources 3`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation</title>
        <meta name="description" content="Lorem">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="yfm" content="builder">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Lorem"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"yfm","content":"builder"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"headings":[],"title":""},"router":{"pathname":"page","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html single page with custom resources 4`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation</title>
        <meta name="description" content="Lorem">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Lorem"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"headings":[],"title":""},"router":{"pathname":"project/config","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html single page with custom resources 5`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"#index","items":[{"name":"Documentation","href":"#page","id":"UUID"},{"name":"Config","href":"#project_config","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;

exports[`Allow load custom resources > md2html single page with custom resources 6`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation | Documentation</title>
        <meta name="description" content="Lorem">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="yfm" content="builder">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n&lt;hr class=\\"yfm-page__delimeter\\"&gt;&lt;p&gt;Lorem&lt;/p&gt;/n","headings":[],"meta":{"metadata":[{"name":"description","content":"Lorem"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"yfm","content":"builder"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"title":"Documentation"},"router":{"pathname":"single-page","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="single-page-toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html single page with custom resources 7`] = `"{"data":{"leading":false,"html":"<p>Lorem</p>/n<hr class=\\"yfm-page__delimeter\\"><p>Lorem</p>/n","headings":[],"meta":{"metadata":[{"name":"description","content":"Lorem"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"yfm","content":"builder"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"title":"Documentation","toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"}},"router":{"pathname":"single-page","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}"`;

exports[`Allow load custom resources > md2html single page with custom resources 8`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;

exports[`Allow load custom resources > md2html with custom resources > filelist 1`] = `
"[
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "_bundle/search-async-1",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/app-css-3",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/page-constructor-extension.css",
  "_bundle/page-constructor-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-css-0",
  "_bundle/search-js-1",
  "_bundle/search-css-3",
  "_bundle/search-css-1",
  "_bundle/search-js-2",
  "_bundle/search-css-2",
  "index.html",
  "page.html",
  "project/config.html",
  "toc.js"
]"
`;

exports[`Allow load custom resources > md2html with custom resources 1`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources > md2html with custom resources 2`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation | Documentation</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="noIndex" content="true">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","description":"","links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"],"title":"Documentation","noIndex":true},"title":"Documentation"},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with custom resources 3`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation</title>
        <meta name="description" content="Lorem">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="yfm" content="builder">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Lorem"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"yfm","content":"builder"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"headings":[],"title":""},"router":{"pathname":"page","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with custom resources 4`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation</title>
        <meta name="description" content="Lorem">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        
        
        <link type="text/css" rel="stylesheet" href="_bundle/search-css-1"/>
        <link type="text/css" rel="stylesheet" href="_bundle/app-css-1"/>
        <link type="text/css" rel="stylesheet" href="_assets/style/test.css"/>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"description","content":"Lorem"},{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"headings":[],"title":""},"router":{"pathname":"project/config","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
        <script type="application/javascript" defer src="_bundle/search-js-0"></script>
        <script type="application/javascript" defer src="_bundle/app-js-1"></script>
        <script type="application/javascript" defer src="_bundle/search-js-2"></script>
        <script type="application/javascript" defer src="_assets/script/test1.js"></script>
        
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with custom resources 5`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;

exports[`Allow load custom resources > md2md with custom resources > filelist 1`] = `
"[
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "index.yaml",
  "page.md",
  "project/config.md",
  "toc.yaml"
]"
`;

exports[`Allow load custom resources > md2md with custom resources 1`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources > md2md with custom resources 2`] = `
"title: Documentation
description: ''
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
  title: Documentation
  noIndex: true
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources > md2md with custom resources 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: yfm
    content: builder
style:
  - _assets/style/test.css
script:
  - _assets/script/test1.js
---

Lorem
"
`;

exports[`Allow load custom resources > md2md with custom resources 4`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
style:
  - _assets/style/test.css
script:
  - _assets/script/test1.js
---
Lorem"
`;

exports[`Allow load custom resources > md2md with custom resources 5`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
path: toc.yaml
"
`;
